# mercury4win-linux

./: .gitignore  PROJECT_REPORT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  custom.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: bootstrap.opml
src-tauri/resources/digest_templates/: multiple_markdown.hbs  single_markdown.hbs  single_text.hbs
src-tauri/resources/prompts/: summary.default.yaml  tagging.default.yaml  translation.default.yaml  translation.hy-mt.yaml
src-tauri/src/: lib.rs
src-tauri/src/agent/: credential_store.rs  mod.rs  prompt_templates.rs  provider.rs  runtime.rs  summary.rs  tagging.rs  translation.rs
src-tauri/src/commands/: agent_cmd.rs  digest_cmd.rs  entry_cmd.rs  feed_cmd.rs  mod.rs  note_cmd.rs  opml_cmd.rs  reader_cmd.rs  settings_cmd.rs  tag_cmd.rs
src-tauri/src/db/: agent_store.rs  connection.rs  content_store.rs  entry_store.rs  feed_store.rs  migrations.rs  mod.rs  models.rs  note_store.rs  tag_store.rs  usage_store.rs
src-tauri/src/digest/: templates.rs
src-tauri/src/feed/: mod.rs  opml_export.rs  opml_import.rs  parser.rs  sync_service.rs  use_cases.rs
src-tauri/src/reader/: extraction.rs  html_to_md.rs  md_to_html.rs  mod.rs  pipeline.rs  theme.rs
src-tauri/src/utils/: paths.rs
src/hooks/: use_keyboard_shortcuts.ts  use_resizable_panels.ts
src/i18n/: en.json  i18n.ts  zh-Hans.json
src/lib/: constants.ts  markdown.ts  tauri_bindings.ts
(+36 files in other folders)
