[package]
name = "mercury"
version = "0.1.0"
description = "A cross-platform RSS reader with AI-powered features"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"

# SQLite — must match rhusqlite version required by deadpool-sqlite 0.13
rusqlite = { version = "0.38", features = ["bundled"] }
deadpool-sqlite = "0.13"

# Feed parsing
feed-rs = "2"
opml = "1"

# Content extraction
decruft = "0.2"

# Markdown processing
htmd = "0.5"
comrak = "0.29"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Templates
handlebars = "6"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
sha2 = "0.10"
html-escape = "0.2"

# Async runtime (Tauri uses tokio)
tokio = { version = "1", features = ["full"] }
